# NBrain

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
NBrain/: CMakeLists.txt
NBrain/Doc/: doxygen.config
NBrain/Include/NBrain/: Config.hpp
NBrain/Include/NBrain/Core/: Random.hpp  Types.hpp
NBrain/Include/NBrain/Core/Debug/: Debug.hpp  LogLevel.hpp
NBrain/Include/NBrain/Neural/Layer/: NeuronLayer.hpp  NeuronLayer.inl  PerceptronLayer.hpp
NBrain/Include/NBrain/Neural/Network/: FeedForwardNN.hpp  FeedForwardNN.inl  INeuralNetwork.hpp  INeuralNetwork.inl  NNCreateInfos.hpp  RecurrentNN.hpp  RecurrentNN.inl  RecursiveNN.hpp  RecursiveNN.inl
NBrain/Include/NBrain/Neural/Neuron/: INeuron.hpp  NeuronData.hpp  Perceptron.hpp
NBrain/Source/NBrain/Core/: Random.cpp
NBrain/Source/NBrain/Core/Debug/: Debug.cpp
NBrain/Source/NBrain/Neural/Neuron/: NeuronData.cpp  Perceptron.cpp
Samples/: CMakeLists.txt
Samples/Prototype/: CMakeLists.txt  main.cpp
